<resources>
    <string name="app_name">SwiftScore</string>
    <string name="tv_upcoming_matches">Upcoming Matches</string>
    <string name="tv_standings">Standings</string>
    <string name="tv_top_scorers">Top Scorers</string>
    <string name="tv_home_team">Home Team</string>
    <string name="tv_away_team">Away Team</string>
    <string name="tv_schedule">Schedule</string>
    <string name="bn_tvMatches">Matches</string>
    <string name="bn_tvStandings">Standings</string>
    <string name="bn_tvTopscorers">Top Scorers</string>
    <string name="tvMatchday1">Matchday1</string>
    <string name="tvMatchday_2">Matchday 2</string>
    <string name="tvMatchday_3">Matchday 3</string>
    <string name="tvMatchday_4">Matchday 4</string>
    <string name="tvMatchday_5">Matchday 5</string>
    <string name="tvMatchday_6">Matchday 6</string>
    <string name="tvMatchday_7">Matchday 7</string>
    <string name="tvMatchday_8">Matchday 8</string>
    <string name="tvMatchday_9">Matchday 9</string>
    <string name="tvMatchday_10">Matchday 10</string>
    <string name="tvMatchday_11">Matchday 11</string>
    <string name="tvMatchday_12">Matchday 12</string>
    <string name="tvMatchday_13">Matchday 13</string>
    <string name="tvMatchday_14">Matchday 14</string>
    <string name="tvMatchday_15">Matchday 15</string>
    <string name="tvMatchday_16">Matchday 16</string>
    <string name="tvMatchday_17">Matchday 17</string>
    <string name="tvMatchday_18">Matchday 18</string>
    <string name="tvMatchday_19">Matchday 19</string>
    <string name="tvMatchday_20">Matchday 20</string>
    <string name="tvMatchday_21">Matchday 21</string>
    <string name="tvMatchday_22">Matchday 22</string>
    <string name="tvMatchday_23">Matchday 23</string>
    <string name="matchday_24">Matchday 24</string>
    <string name="tvMatchday_25">Matchday 25</string>
    <string name="tvMatchday_26">Matchday 26</string>
    <string name="tvMatchday_27">Matchday 27</string>
    <string name="tvMatchday_28">Matchday 28</string>
    <string name="tvMatchday_29">Matchday 29</string>
    <string name="tvMatchday_30">Matchday 30</string>
    <string name="tvMatchday_31">Matchday 31</string>
    <string name="tvMatchday_32">Matchday 32</string>
    <string name="tvMatchday_33">Matchday 33</string>
    <string name="tvMatchday_34">Matchday 34</string>
    <string name="tvMatchday_35">Matchday 35</string>
    <string name="tvMatchday_36">Matchday 36</string>
    <string name="tvMatchday_37">Matchday 37</string>
    <string name="tvMatchday_38">Matchday 38</string>
    <string name="tv_Availability">Currently Not Available</string>
    <string name="tv_Later">Try again later</string>
    <string name="favourite">Favourite</string>
    <string name="favourites">Favourites</string>
    <string-array name="premier_league">
        <item>Premier League</item>
        <item>Ligue 1</item>
    </string-array>
</resources>