<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="322dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="@dimen/cardview_compat_inset_shadow"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey">

            <TextView
                android:id="@+id/homeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="1"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/tvHomeTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.443"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHomeTeam"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/homeTeamCrest"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tvHomeTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/tv_home_team"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/homeTeamCrest"
                app:layout_constraintStart_toStartOf="@id/homeTeamCrest"
                app:layout_constraintTop_toTopOf="@id/homeTeamCrest"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/awayTeamCrest"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@id/homeTeamCrest"
                app:layout_constraintStart_toStartOf="@id/homeTeamCrest"
                app:layout_constraintTop_toBottomOf="@id/homeTeamCrest"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tvAwayTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/tv_away_team"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/awayTeamCrest"
                app:layout_constraintEnd_toEndOf="@+id/tvHomeTeam"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/tvHomeTeam"
                app:layout_constraintTop_toTopOf="@+id/awayTeamCrest" />

            <TextView
                android:id="@+id/tvSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/tv_schedule"
                android:textColor="@color/green"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvAwayTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHomeTeam"
                app:layout_constraintVertical_bias="0.382" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/tv_schedule"
                android:textColor="@color/green"
                android:textSize="11sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/tvAwayTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHomeTeam"
                app:layout_constraintVertical_bias="0.382" />

            <TextView
                android:id="@+id/awayScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="2"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/tvAwayTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.442"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvAwayTeam" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>